--- a/src/IM2/templates/index.html
+++ b/src/IM2/templates/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    hello world
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home</title>
+
+  <link rel="stylesheet" href="../styles/main.css" />
+</head>
+
+<body>
+  <h1>hello world</h1>
+
+  <script src="../scripts/index.js"></script>
+</body>
+
 </html>
