--- a/src/IM2/styles/main.css
+++ b/src/IM2/styles/main.css
@@ -13,6 +13,6 @@
 }
 
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "Metropolis", sans-serif;
 }
 /*# sourceMappingURL=main.css.map */
