--- a/src/IM2/templates/index.html
+++ b/src/IM2/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home</title>
 
-  <link rel="stylesheet" href="../styles/main.css" />
+  <link rel="stylesheet" href="../styles/dist/main.css" />
 </head>
 
 <body>
