--- a/src/IM2/styles/main.css
+++ b/src/IM2/styles/main.css
@@ -13,6 +13,37 @@
 }
 
 body {
-  font-family: "Metropolis", sans-serif;
+  font-family: "Inter", sans-serif;
+}
+
+#test-l-1 .buttons,
+#test-l-2 .buttons,
+#test-l-3 .buttons {
+  margin: 0;
+  padding: 0;
+}
+
+#test-l-2 .form-row,
+#test-l-3 .form-row {
+  margin-bottom: 1rem;
+}
+
+.bs-stepper-pane .buttons {
+  position: relative;
+  width: 100%;
+  height: 38px;
+}
+
+.bs-stepper-pane .buttons .btn {
+  position: absolute;
+  top: 0;
+}
+
+.bs-stepper-pane .buttons .btn.next {
+  right: 0;
+}
+
+.bs-stepper-pane .buttons .btn.previous {
+  left: 0;
 }
 /*# sourceMappingURL=main.css.map */
