--- a/src/IM2/templates/customer_reg.html
+++ b/src/IM2/templates/customer_reg.html
@@ -74,6 +74,19 @@
                 class="bs-stepper-pane"
                 aria-labelledby="stepper1trigger1"
               >
+              <div class="row mb-3">
+                <div class="col-3"></div>
+                <div class="col-2"></div>
+                <div class="col-2 text-center">
+                    <label>Profile Picture</label>
+                    <div class="circle">
+                        <br><br>
+                        <input type="file" class="form-control" id="customerImg">
+                    </div>
+                </div>
+                <div class="col-2"></div>
+                <div class="col-3"></div>
+              </div>
                 <div class="form-group row">
                   <label for="dateRegistered" class="col-2 col-form-label"
                     >Date Registered</label
