wip: customer and product pages / todo: add customer and product buttons

--- a/src/IM2/styles/config/_typography.scss
+++ b/src/IM2/styles/config/_typography.scss
@@ -1,5 +1,6 @@
 $metropolis: "Metropolis";
 $inter: "Inter";
+$lato: "Lato";
 
 @font-face {
   font-family: $metropolis;
@@ -9,7 +10,7 @@ $inter: "Inter";
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 
 $normal: 400;
 $bold: 700;
-
