--- a/src/IM2/styles/config/_variables.scss
+++ b/src/IM2/styles/config/_variables.scss
@@ -2,3 +2,17 @@ $h-black: #20123a;
 $p-black: #42414d;
 $reg-black: #000;
 $primary-blue: #0250bb;
+
+$gray0: #f1f3f5;
+$gray1: #f7f8fb;
+$gray3: #efeff3;
+$gray4: #868e96;
+$gray5: #495057;
+$light-orange: #ffe5d3;
+$light-blue: #ccf8fe;
+$light-violet: #dad7fe;
+$light-green: #e2fbd7;
+$light-red: #ffe3e3;
+$light-yellow: #fff5cc;
+
+$default-radius: 6px;
