--- a/src/IM2/styles/main.css
+++ b/src/IM2/styles/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 @font-face {
   font-family: "Metropolis";
   src: url("../../assets/fonts/Metropolis-Bold.ttf");
@@ -13,7 +14,29 @@
 }
 
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "Lato", sans-serif;
+  color: #20123a;
+}
+
+:root {
+  font-size: 16px;
+}
+
+.container {
+  width: 1100px;
+  margin: 0 auto;
+}
+
+.app {
+  height: 100vh;
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 #test-l-1 .buttons,
@@ -45,5 +68,467 @@ body {
 
 .bs-stepper-pane .buttons .btn.previous {
   left: 0;
+}
+
+.main-content {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  background-color: #f1f3f5;
+}
+
+.main-content .container {
+  padding-top: 4rem;
+  max-height: 80vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main-content .header,
+.main-content .table {
+  background-color: white;
+  border-radius: 6px;
+}
+
+.main-content .header .main-container,
+.main-content .table .main-container {
+  margin: 0 2rem;
+}
+
+.main-content .header {
+  margin-bottom: 1.25rem;
+  padding-top: 1.5rem;
+}
+
+.main-content .header .filter .main-container {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.main-content .header .filter .title {
+  margin-right: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.main-content .header .filter .title__icon {
+  margin-right: 0rem;
+}
+
+.main-content .header .filter .title__text {
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.main-content .header .filter .filter-choices {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.main-content .header .filter .filter-choices .filter-option:not(:last-child) {
+  margin-right: 1rem;
+}
+
+.main-content .header .filter .filter-option-container {
+  position: relative;
+}
+
+.main-content .header .filter .filter-search {
+  position: absolute;
+  left: 0;
+  margin-top: 0.5rem;
+}
+
+.main-content .header .filter .filter-search input {
+  width: 100%;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  border-radius: 6px;
+  border: 1px solid #868e96;
+}
+
+.main-content .header .filter .filter-search input:focus {
+  border: 1px solid black;
+}
+
+.main-content .header .filter .filter-search--hide {
+  display: none;
+}
+
+.main-content .header .filter .filter-search--show {
+  display: block;
+}
+
+.main-content .header .filter .filter-option {
+  font-size: 1rem;
+  font-weight: 400;
+  font-family: "Lato";
+  border: none;
+  padding: 0.75rem 1.5rem;
+  border-radius: 6px;
+  -webkit-transition: -webkit-filter 150ms ease;
+  transition: -webkit-filter 150ms ease;
+  transition: filter 150ms ease;
+  transition: filter 150ms ease, -webkit-filter 150ms ease;
+}
+
+.main-content .header .filter .filter-option.orange {
+  background-color: #ffe5d3;
+}
+
+.main-content .header .filter .filter-option.blue {
+  background-color: #ccf8fe;
+}
+
+.main-content .header .filter .filter-option.violet {
+  background-color: #dad7fe;
+}
+
+.main-content .header .filter .filter-option.green {
+  background-color: #e2fbd7;
+}
+
+.main-content .header .filter .filter-option.red {
+  background-color: #ffe3e3;
+}
+
+.main-content .header .filter .filter-option.yellow {
+  background-color: #fff5cc;
+}
+
+.main-content .header .filter .filter-option:hover:not(.filter-keyword) {
+  cursor: pointer;
+  -webkit-filter: brightness(95%);
+          filter: brightness(95%);
+}
+
+.main-content .header .filter .filter-option.filter-keyword {
+  position: absolute;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.main-content .header .filter .filter-option.filter-keyword .icon-container {
+  height: 1.25rem;
+  width: 1.25rem;
+  -webkit-transform: translate(1rem, 1px);
+          transform: translate(1rem, 1px);
+  cursor: pointer;
+  border-radius: 6px;
+  -webkit-transition: background-color 150ms ease;
+  transition: background-color 150ms ease;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.main-content .header .filter .filter-option.filter-keyword .icon-container:hover {
+  background-color: rgba(51, 51, 51, 0.1);
+}
+
+.main-content .table {
+  overflow-y: auto;
+  scrollbar-width: none;
+}
+
+.main-content .table::-webkit-scrollbar {
+  display: none;
+}
+
+.main-content .table-row {
+  height: 3.75rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main-content .table-row .main-container {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.main-content .table-row.table-header {
+  margin-top: 2.5rem;
+  color: #868e96;
+  border-top: 1px solid #efeff3;
+}
+
+.main-content .table-row:not(.table-header):nth-child(even) {
+  background-color: #f7f8fb;
+}
+
+.main-content .table-row:not(.table-header):hover {
+  background-color: #efeff3;
+}
+
+.main-content .customer-grid h5,
+.main-content .customer-grid span,
+.main-content .products-grid h5,
+.main-content .products-grid span {
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.main-content .customer-grid h5:last-child,
+.main-content .customer-grid span:last-child,
+.main-content .products-grid h5:last-child,
+.main-content .products-grid span:last-child {
+  justify-self: flex-end;
+}
+
+.main-content .products-grid {
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "name brand price items category date-registered";
+  -ms-grid-columns: (1fr)[6];
+      grid-template-columns: repeat(6, 1fr);
+}
+
+.main-content .products-grid .name {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: name;
+}
+
+.main-content .products-grid .brand {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: brand;
+}
+
+.main-content .products-grid .price {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: price;
+}
+
+.main-content .products-grid .items {
+  -ms-grid-row: 1;
+  -ms-grid-column: 4;
+  grid-area: items;
+}
+
+.main-content .products-grid .category {
+  -ms-grid-row: 1;
+  -ms-grid-column: 5;
+  grid-area: category;
+}
+
+.main-content .products-grid .date-registered {
+  -ms-grid-row: 1;
+  -ms-grid-column: 5;
+  grid-area: date-registered;
+}
+
+.main-content .customer-grid {
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "first-name last-name birthdate city date-registered";
+  -ms-grid-columns: (1fr)[5];
+      grid-template-columns: repeat(5, 1fr);
+}
+
+.main-content .customer-grid .first-name {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: first-name;
+}
+
+.main-content .customer-grid .last-name {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: last-name;
+}
+
+.main-content .customer-grid .birthdate {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: birthdate;
+}
+
+.main-content .customer-grid .city {
+  -ms-grid-row: 1;
+  -ms-grid-column: 4;
+  grid-area: city;
+}
+
+.main-content .customer-grid .date-registered {
+  -ms-grid-row: 1;
+  -ms-grid-column: 5;
+  grid-area: date-registered;
+}
+
+.topbar {
+  padding: 10px 0;
+  border-bottom: 1px solid #d8d8d8;
+}
+
+.topbar .container {
+  height: 64px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.topbar .user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.topbar .user__name {
+  margin-right: 1rem;
+}
+
+.topbar .user__picture {
+  width: 2.25rem;
+  height: 2.25rem;
+  cursor: pointer;
+}
+
+.topbar .navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.topbar .navigation .nav-item {
+  cursor: pointer;
+  text-decoration: none;
+  color: #868e96;
+  border-radius: 6px;
+  padding: 0.75rem 1.5rem;
+  -webkit-transition: background-color 200ms ease, color 200ms ease, -webkit-filter 200ms ease;
+  transition: background-color 200ms ease, color 200ms ease, -webkit-filter 200ms ease;
+  transition: background-color 200ms ease, color 200ms ease, filter 200ms ease;
+  transition: background-color 200ms ease, color 200ms ease, filter 200ms ease, -webkit-filter 200ms ease;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.topbar .navigation .nav-item:first-child {
+  margin-right: 1.5rem;
+}
+
+.topbar .navigation .nav-item:hover {
+  color: #495057;
+  background-color: #f1f3f5;
+}
+
+.topbar .navigation .nav-item--selected {
+  color: #495057;
+  font-weight: 700;
+  background-color: #f1f3f5;
+}
+
+.topbar .navigation .nav-item--selected:hover {
+  -webkit-filter: brightness(90%);
+          filter: brightness(90%);
 }
 /*# sourceMappingURL=main.css.map */
