--- a/src/IM2/styles/_base.scss
+++ b/src/IM2/styles/_base.scss
@@ -6,5 +6,23 @@
 }
 
 body {
-  font-family: $inter, sans-serif;
+  font-family: $lato, sans-serif;
+  color: $h-black;
+}
+
+:root {
+  font-size: 16px;
+}
+
+.container {
+  width: 1100px;
+  margin: 0 auto;
+}
+
+.app {
+  height: 100vh;
+  width: 100vw;
+
+  display: flex;
+  flex-direction: column;
 }
