--- a/src/IM2/styles/main.scss
+++ b/src/IM2/styles/main.scss
@@ -4,3 +4,4 @@
 @import "components/registrationForm";
 @import "components/main-content";
 @import "components/topbar";
+@import "components/landing-page";
