--- a/src/IM2/templates/products.html
+++ b/src/IM2/templates/products.html
@@ -16,7 +16,9 @@
     <div class="app">
       <div class="topbar">
         <div class="container">
-          <a href="#"><img src="../assets/images/logo.svg" alt="" /></a>
+          <a href="./index.html"
+            ><img src="../assets/images/logo.svg" alt=""
+          /></a>
           <nav class="navigation">
             <a href="./customers.html" class="nav-item" id="customers"
               >Customers</a
@@ -238,6 +240,9 @@
             </div>
           </div>
         </div>
+        <a href="./customer_reg.html" class="add">
+          <button class="add__btn">Add Product</button>
+        </a>
       </main>
     </div>
   </body>
