--- a/src/IM2/styles/main.css
+++ b/src/IM2/styles/main.css
@@ -39,6 +39,10 @@ body {
           flex-direction: column;
 }
 
+.bg-color--gray {
+  background-color: #f1f3f5;
+}
+
 #test-l-1 .buttons,
 #test-l-2 .buttons,
 #test-l-3 .buttons {
@@ -75,6 +79,31 @@ body {
       -ms-flex-positive: 1;
           flex-grow: 1;
   background-color: #f1f3f5;
+}
+
+.main-content .add {
+  position: absolute;
+  right: 6rem;
+  bottom: 5rem;
+}
+
+.main-content .add__btn {
+  background-color: #ffe3e3;
+  border: none;
+  border-radius: 6px;
+  font-weight: 700;
+  padding: 1.25rem;
+  border: 1px solid black;
+  cursor: pointer;
+  -webkit-transition: -webkit-filter 200ms ease;
+  transition: -webkit-filter 200ms ease;
+  transition: filter 200ms ease;
+  transition: filter 200ms ease, -webkit-filter 200ms ease;
+}
+
+.main-content .add__btn:hover {
+  -webkit-filter: brightness(95%);
+          filter: brightness(95%);
 }
 
 .main-content .container {
@@ -424,6 +453,8 @@ body {
 }
 
 .topbar {
+  position: -webkit-sticky;
+  position: sticky;
   padding: 10px 0;
   border-bottom: 1px solid #d8d8d8;
 }
@@ -530,5 +561,203 @@ body {
 .topbar .navigation .nav-item--selected:hover {
   -webkit-filter: brightness(90%);
           filter: brightness(90%);
+}
+
+.landing-page {
+  height: 80vh;
+  background-color: #f1f3f5;
+}
+
+.landing-page .container {
+  padding-top: 10rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.landing-page .hero-content,
+.landing-page .login-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.landing-page .hero-content {
+  width: 350px;
+}
+
+.landing-page .hero-content__company-logo {
+  height: 3.25rem;
+  margin-bottom: 1.5rem;
+}
+
+.landing-page .hero-content__subtitle {
+  font-weight: 400;
+  font-size: 1.75rem;
+}
+
+.landing-page .login-card {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: white;
+  -webkit-box-shadow: 20px 20px 60px #d9d9d9, -20px -20px 60px rgba(255, 255, 255, 0.01);
+          box-shadow: 20px 20px 60px #d9d9d9, -20px -20px 60px rgba(255, 255, 255, 0.01);
+  padding: 2rem 1.5rem 0.75rem;
+  border-radius: 1rem;
+}
+
+.landing-page .login-card .forget {
+  width: 100%;
+  text-decoration: none;
+  text-align: center;
+  color: #0069ff;
+}
+
+.landing-page .login-card hr {
+  margin: 1.5rem 0 1rem;
+  width: 100%;
+  height: 1px;
+  background-color: #dddfe2;
+  border: none;
+}
+
+.landing-page .login-card button.auth {
+  cursor: pointer;
+  font-weight: 700;
+}
+
+.landing-page .login-card input.auth {
+  outline: none;
+}
+
+.landing-page .login-card input.auth:focus {
+  border: 2px solid #0069ff;
+}
+
+.landing-page .login-card .auth {
+  padding: 0.75rem 1rem;
+  border-radius: 0.5rem;
+  border: 1px solid #dddfe2;
+  font-size: 18px;
+  font-weight: 400;
+  font-family: "Lato";
+  margin-bottom: 1rem;
+}
+
+.landing-page .login-card .auth.login {
+  background-color: #0069ff;
+  color: white;
+  -webkit-transition: -webkit-filter 200ms ease;
+  transition: -webkit-filter 200ms ease;
+  transition: filter 200ms ease;
+  transition: filter 200ms ease, -webkit-filter 200ms ease;
+}
+
+.landing-page .login-card .auth.login:hover {
+  -webkit-filter: brightness(90%);
+          filter: brightness(90%);
+}
+
+.landing-page .login-card .auth.sign-up {
+  width: 40%;
+  background-color: transparent;
+  border: 2px solid #0069ff;
+  color: #0069ff;
+  -webkit-transition: background-color 200ms ease, color 200ms ease;
+  transition: background-color 200ms ease, color 200ms ease;
+}
+
+.landing-page .login-card .auth.sign-up:hover {
+  background-color: #0069ff;
+  color: white;
+}
+
+.landing-page .login-card .auth.full {
+  width: 400px;
+}
+
+.topbar .container .logo {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.topbar .container .nav {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.topbar .container .nav .nav-item {
+  height: 100%;
+  text-decoration: none;
+  font-weight: bold;
+  color: #20123a;
+  -webkit-transition: color 200ms ease;
+  transition: color 200ms ease;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.topbar .container .nav .nav-item:not(:last-child) {
+  margin-right: 4rem;
+}
+
+.topbar .container .nav .nav-item:hover {
+  color: #0069ff;
 }
 /*# sourceMappingURL=main.css.map */
