--- a/src/IM2/templates/customers.html
+++ b/src/IM2/templates/customers.html
@@ -16,7 +16,9 @@
     <div class="app">
       <div class="topbar">
         <div class="container">
-          <a href="#"><img src="../assets/images/logo.svg" alt="" /></a>
+          <a href="./index.html"
+            ><img src="../assets/images/logo.svg" alt=""
+          /></a>
           <nav class="navigation">
             <a
               href="./customers.html"
@@ -54,9 +56,7 @@
                 </div>
                 <div class="filter-choices">
                   <div class="filter-option-container">
-                    <button class="filter-option orange">
-                      First Name
-                    </button>
+                    <button class="filter-option orange">First Name</button>
                     <div class="filter-search filter-search--hide">
                       <input type="text" placeholder="First Name" />
                     </div>
@@ -239,6 +239,9 @@
             </div>
           </div>
         </div>
+        <a href="./customer_reg.html" class="add">
+          <button class="add__btn">Add Customer</button>
+        </a>
       </main>
     </div>
   </body>
