--- a/src/IM2/templates/index.html
+++ b/src/IM2/templates/index.html
@@ -1,18 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home</title>
+    <link rel="stylesheet" href="../styles/main.css" />
+  </head>
 
-  <link rel="stylesheet" href="../styles/dist/main.css" />
-</head>
+  <body>
+    <div class="topbar">
+      <div class="container">
+        <a href="./index.html" class="logo"
+          ><img src="../assets/images/logo.svg" alt=""
+        /></a>
+        <div class="nav">
+          <a href="#" class="nav-item">About</a>
+          <a href="#" class="nav-item">Services</a>
+          <a href="#" class="nav-item">Products</a>
+          <a href="#" class="nav-item">Pricing</a>
+        </div>
+      </div>
+    </div>
 
-<body>
-  <h1>hello world</h1>
-
-  <script src="../scripts/index.js"></script>
-</body>
-
+    <main class="landing-page">
+      <div class="container">
+        <div class="hero-content">
+          <img
+            src="../assets/images/logo.svg"
+            alt=""
+            class="hero-content__company-logo"
+          />
+          <h3 class="hero-content__subtitle">
+            Lorem ipsum dolor sit amet consectetur adipisicing.
+          </h3>
+        </div>
+        <div class="login-card">
+          <input
+            type="text"
+            name=""
+            id=""
+            class="username auth full"
+            placeholder="Username"
+          />
+          <input
+            type="password"
+            name=""
+            id=""
+            class="password auth full"
+            placeholder="Password"
+          />
+          <a href="./customers.html">
+            <button class="login auth full">Log In</button>
+          </a>
+          <a href="#" class="forget">Forget Account?</a>
+          <hr />
+          <button class="sign-up auth">Sign Up</button>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
