--- a/src/IM2/styles/components/_main-content.scss
+++ b/src/IM2/styles/components/_main-content.scss
@@ -4,8 +4,13 @@
 
   .add {
     position: absolute;
-    right: 6rem;
+    right: 7rem;
     bottom: 5rem;
+
+    @media only screen and (max-width: 1440px) {
+      right: 2rem;
+      bottom: 2rem;
+    }
 
     &__btn {
       background-color: $light-red;
